Fix jump not taking to correct move if move is of different chapter

--- a/ui/chat/css/_discussion.scss
+++ b/ui/chat/css/_discussion.scss
@@ -106,9 +106,16 @@
     }
   }
 
-  a.jump {
+  button.jump {
     font-size: medium;
     cursor: pointer;
+    background-color: transparent;
+    color: $c-link;
+    border: none;
+  }
+
+  button.jump:hover {
+    color: $c-link-hover;
   }
 
   div.actions {
